react-app/src/components/Navigation/navigation.css
.navbar-total {
    display:flex;
    flex-direction: column;
    height: 5vh;
    width: 100vw;
    position: absolute;
    min-height: 4vh;
    top: 0;
    margin-left: -8px;
}

.navbar-top {
    display:flex;
    flex-direction: row;
    justify-content: space-between;
    background-color: rgb(173, 17, 0);
    position: relative;
    width: 100vw;
    height: 4em;
}

.navbar-tl {
    margin-left: 14.5vw;
    color: white;
    font-size: 18px;
}

.aboutPageBtn {
    margin-right: 15.13vw;
    color: white;
    font-size: 18px;
}

.aboutUsLink {
    color:white
}

.navbar-bottom {
    display: flex;
    flex-direction: row;
    /* justify-content: space-between; */
    align-items: center;
    background-color: rgb(225, 5, 0);
    height: 1px;
    width: 100vw;
    min-height: 4vw;
    position: relative;
    top: 0;
    z-index: 999;
    /* border:1px solid yellow */
}

.navbar-left {
    margin-left: 15%;
    width: 35%;
    height: 100%;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    /* border: 1px solid orange */
}
.nav-words1 {
    color: white;
    font-size: 18px;
    height: 100%;
    width: 50%;
    text-align: center;
    display:flex;
    flex-direction : column;
    justify-content: center;
}


.logo {
    height: 40%;
    width: 40%
}

.navbar-right {
    margin-right: 15.5vw;
}

button {
    background-color: transparent;
    border: none
}

active:visited {
    color: white
}

.nav-words {
    color: white;
    font-size: 18px
}

